добавлен вывод df.duration.describe() для каждого датасета

--- a/experiments/Dusha_EDA.ipynb
+++ b/experiments/Dusha_EDA.ipynb
@@ -56,9 +56,9 @@
    "outputs": [],
    "source": [
     "ds_index = -1\n",
-    "crowd_test = os.path.join(DATASET_PATH, DATASETS[ds_index])\n",
-    "crowd_info = os.path.join(crowd_test,f'raw_{DATASETS[ds_index]}.tsv')\n",
-    "df = pd.read_csv(crowd_info, sep='\\t')"
+    "dateset = os.path.join(DATASET_PATH, DATASETS[ds_index])\n",
+    "dateset_info = os.path.join(dateset, f'raw_{DATASETS[ds_index]}.tsv')\n",
+    "df = pd.read_csv(dateset_info, sep='\\t')"
    ]
   },
   {
@@ -306,6 +306,16 @@
       "dtypes: float64(1), object(1)\n",
       "memory usage: 9.9+ MB\n",
       "None\n",
+      "count    645813.000000\n",
+      "mean          3.253059\n",
+      "std           0.994352\n",
+      "min           1.099875\n",
+      "25%           2.500000\n",
+      "50%           3.200000\n",
+      "75%           4.000000\n",
+      "max           9.260000\n",
+      "Name: duration, dtype: float64 \n",
+      "\n",
       "Файл: raw_podcast_test.tsv\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 83447 entries, 0 to 83446\n",
@@ -317,6 +327,16 @@
       "dtypes: float64(1), object(1)\n",
       "memory usage: 1.3+ MB\n",
       "None\n",
+      "count    83447.000000\n",
+      "mean         3.193205\n",
+      "std          0.935630\n",
+      "min          1.100000\n",
+      "25%          2.400000\n",
+      "50%          3.100125\n",
+      "75%          3.900375\n",
+      "max          5.000000\n",
+      "Name: duration, dtype: float64 \n",
+      "\n",
       "Файл: raw_crowd_train.tsv\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 906953 entries, 0 to 906952\n",
@@ -328,6 +348,16 @@
       "dtypes: object(2)\n",
       "memory usage: 13.8+ MB\n",
       "None\n",
+      "count    906953.000000\n",
+      "mean          4.532336\n",
+      "std           1.590199\n",
+      "min           0.064000\n",
+      "25%           3.440000\n",
+      "50%           4.320000\n",
+      "75%           5.360000\n",
+      "max          30.640000\n",
+      "Name: duration, dtype: float64 \n",
+      "\n",
       "Файл: raw_crowd_test.tsv\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 79088 entries, 0 to 79087\n",
@@ -338,7 +368,17 @@
       " 1   speaker_emo    77833 non-null  object\n",
       "dtypes: object(2)\n",
       "memory usage: 1.2+ MB\n",
-      "None\n"
+      "None\n",
+      "count    79088.000000\n",
+      "mean         4.726625\n",
+      "std          1.477528\n",
+      "min          0.660125\n",
+      "25%          3.740000\n",
+      "50%          4.560000\n",
+      "75%          5.520000\n",
+      "max         21.849563\n",
+      "Name: duration, dtype: float64 \n",
+      "\n"
      ]
     }
    ],
@@ -348,7 +388,8 @@
     "    for file in file_list:\n",
     "        df = pd.read_csv(file, sep='\\t')\n",
     "        print(f'Файл: {os.path.basename(file)}')\n",
-    "        print(df[['annotator_emo', 'speaker_emo']].info())"
+    "        print(df[['annotator_emo', 'speaker_emo']].info())\n",
+    "        print(df.duration.describe(), '\\n')"
    ]
   },
   {
