добавлен вывод df.duration.describe() для каждого датасета

--- a/experiments/Dusha_EDA.ipynb
+++ b/experiments/Dusha_EDA.ipynb
@@ -56,9 +56,9 @@
    "outputs": [],
    "source": [
     "ds_index = -1\n",
-    "dateset = os.path.join(DATASET_PATH, DATASETS[ds_index])\n",
-    "dateset_info = os.path.join(dateset, f'raw_{DATASETS[ds_index]}.tsv')\n",
-    "df = pd.read_csv(dateset_info, sep='\\t')"
+    "dataset = os.path.join(DATASET_PATH, DATASETS[ds_index])\n",
+    "dataset_info = os.path.join(dataset, f'raw_{DATASETS[ds_index]}.tsv')\n",
+    "df = pd.read_csv(dataset_info, sep='\\t')"
    ]
   },
   {
